# serde-evaluate

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: error.rs  extractor.rs  lib.rs  serializer.rs  value.rs
src/serializer/: extractor.rs  key.rs  list.rs  mod.rs  scalar_capture.rs  skip.rs
tests/: composite.rs  field.rs  json_value.rs  list.rs  nested.rs
