[package]
name = "serde_evaluate"
version = "0.1.1"
edition = "2021"
description = "Extract single scalar field values from Serializable structs without full deserialization."
authors = [
    "Pierre Zemb <contact@pierrezemb.fr>"
]
license = "Apache-2.0"
repository = "https://github.com/pierrez/serde-evaluate"
readme = "README.md"
keywords = ["serde", "serialization", "extraction", "evaluate", "field"]
categories = ["encoding", "data-structures"]

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_bytes = "0.11.10"
thiserror = "2.0.15"

[dev-dependencies]
